# SoleMD.Graph

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Agents.md  CLAUDE.md  PROJECT_INSTRUCTIONS.md  README.md  add_neuropsych_benchmarks.py  apt.txt  drizzle.config.ts  eslint.config.mjs  jest.config.ts  jest.setup.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  paste.md  patch_benchmark_models.py  patch_benchmarks.py  patch_docs_map.py  patch_docs_rag.py  patch_perf_tests.py  patch_queries.py  playwright.config.ts  postBuild.bash  postcss.config.mjs  proxy.ts  split.py  split_file_analysis.py  split_query.py  split_query_file.py  split_query_filters.py  tailwind.config.ts  test_benchmarks.py  test_plan.py  test_plan2.py  (+8 more)
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  main.py
apps/worker/: README.md  pyproject.toml
apps/worker/app/: __init__.py  broker.py  config.py  corpus_worker.py  db.py  document_schema.py  document_spine.py  evidence_worker.py  hot_text_worker.py  ingest_worker.py  main.py  warehouse_storage.py
engine/: pyproject.toml
engine/app/: __init__.py  config.py  db.py  langfuse_config.py  main.py  pgvector_utils.py
engine/data/: benchmark_bioc_primary_corpus_ids.txt  benchmark_missing_chunks.txt  biomedical_narrative_v1-missing-corpus-ids.txt  missing_chunk_corpus_ids.txt  post-router-narrow-2026-04-07-targets.txt  runtime_eval_bioc_refresh_targets_2026-04-08.txt  runtime_eval_missing_bioc_chunked_2026-04-08.txt  runtime_eval_missing_bioc_sparse_2026-04-08.txt  umls_mesh_cache.json
engine/db/: __init__.py
engine/scripts/: audit_benchmark_case_coverage.py  audit_benchmark_warehouse_coverage.py  audit_psych_api_discovery.py  audit_psych_api_v2.py  audit_psych_concepts.py  audit_psych_concepts_v2.py  audit_psych_concepts_v3.py  audit_psych_targeted.py  audit_rag_parsers.py  audit_source_locator_coverage.py  backfill_highlight_policy.py  backfill_vocab_aliases.py  benchmark_rag_sentence_segmentation.py  calibrate_cluster_resolution.py  cleanup_repo_tmp.py  enrich_vocab_terms.py  evaluate_codeatlas_quality.py  evaluate_dense_contract_audit.py  evaluate_rag_runtime.py  materialize_bioc_archive_discovery_reports.py  populate_bioc_archive_manifest.py  prepare_rag_curated_benchmarks.py  prepare_rag_runtime_eval_cohort.py  prepare_rag_runtime_sentence_hard_benchmark.py  profile_rag_title_search.py  rag_benchmark.py  run_detached_engine_job.py  run_llm_judge_evaluation.py  sync_benchmarks_to_langfuse.py  tmp_cleanup.py
engine/test/: conftest.py  test_affiliations.py  test_base_policy.py  test_benchmark_warehouse_audit.py  test_citation_context_backfill.py  test_citations.py  test_codeatlas_eval.py  test_config.py  test_db.py  test_docs_runtime_contract.py  test_enrich.py  test_entities_pipeline.py  test_entity_api.py  test_entity_build_checkpoint.py  test_entity_projections.py  test_entity_repository.py  test_entity_service.py  test_etl.py  test_filter.py  test_graph_attachment_api.py  test_graph_attachment_service.py  test_graph_build_cleanup.py  test_graph_build_preflight.py  test_graph_bundle_contract.py  test_graph_export_bundle.py  test_graph_labels.py  test_graph_layout.py  test_graph_paper_summary.py  test_graph_publish.py  test_graph_repository.py  test_graph_verify.py  test_highlight_policy.py  test_paper_evidence.py  test_pubtator.py  test_pubtator_api.py  test_rag_alignment.py  test_rag_answer.py  test_rag_answer_generation.py  test_rag_api.py  test_rag_backfill_chunks.py  (+100 more)
(+2695 files in other folders)
