[project]
name = "solemd-graph-engine"
version = "0.1.0"
description = "Data engine for SoleMD.Graph — PubTator3/S2 ingestion, embedding, graph building, RAG search"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "psycopg[binary,pool]>=3.2.0",
    "asyncpg>=0.30.0",
    # Task queue
    "dramatiq[redis]>=1.17.0",
    # Data processing
    "duckdb>=1.1.0",
    "pyarrow>=18.0.0",
    "stanza",
    "syntok>=1.4.4",
    "tiktoken",
    # HTTP
    "httpx>=0.27.0",
    # Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Monitoring
    "langfuse>=2.50.0",
    "google-genai>=1.69.0",
    "openinference-instrumentation-google-genai>=0.1.14",
    "google-api-core>=2.30.0",
]

[project.optional-dependencies]
# ML models (install when needed for embedding/reranking)
ml = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "sentence-transformers>=3.3.0",
]
# Graph building (install when needed for UMAP/clustering)
graph = [
    "umap-learn>=0.5.7",
    "python-igraph>=0.11.8",
    "leidenalg>=0.10.2",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
]
# Development
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "unit: Pure logic, no I/O",
    "integration: Needs DB or external service",
    "slow: Takes >5 seconds",
]
