[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solemd-graph-api"
version = "0.1.0"
description = "Permanent FastAPI runtime root for the SoleMD.Graph backend rebuild."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "asyncpg==0.31.0",
  "fastapi==0.136.0",
  "pydantic==2.13.2",
  "pydantic-settings==2.13.1",
  "uvicorn==0.44.0",
]

[project.scripts]
solemd-graph-api = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
